# GhostDesk

./: .gitignore  README.md  pyproject.toml  telegram-proxy-worker.js
ghostpc/: .gitignore  README.md  __init__.py  config.py  config_editor.py  main.py  requirements.txt  setup.py  wizard.py
ghostpc/core/: __init__.py  agent.py  ai.py  autonomous.py  memory.py  offline_queue.py  scheduler.py  security.py
ghostpc/modules/: __init__.py  api_connector.py  auto_responder.py  browser.py  config_manager.py  document.py  email_handler.py  file_system.py  google_services.py  media.py  notifications.py  package.json  pc_control.py  personality.py  screen_watcher.py  telegram_client.py  voice.py  whatsapp.py  whatsapp_bridge.js  whatsapp_cloud.py  workflow_engine.py  youtube_insights.py
ghostpc/relay/: __init__.py  relay_server.py
